--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "env2": "^2.2.2",
     "expres": "0.0.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1"
   }
 }
